syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.congthanh.promotionservice.grpc";
option java_outer_classname = "PromotionServiceProto";

import "google/protobuf/timestamp.proto";

service PromotionService {
  rpc GetPromotion (PromotionRequest) returns (PromotionResponse) {}
  rpc GetPromotionByCode (GetPromotionByCodeRequest) returns (PromotionResponse);
}

message PromotionRequest {
  int64 promotionId = 1;
}

message PromotionResponse {
  int64 id = 1;
  string code = 2;
  PromotionType type = 3;
  float value = 4;
  int32 usageLimit = 5;
  string description = 6;
  google.protobuf.Timestamp startDate = 7;
  google.protobuf.Timestamp endDate = 8;
  string status = 9;
  google.protobuf.Timestamp createdAt = 10;
  google.protobuf.Timestamp updatedAt = 11;
}

enum PromotionType {
  DISCOUNT = 0;
  SALE = 1;
  VOUCHER = 2;
  BUY_ONE_GET_ONE = 3;
  FLASH_SALE = 4;
  FREE_SHIPPING = 5;
  LOYALTY_PROGRAM = 6;
  BUNDLE_DEAL = 7;
  FIRST_PURCHASE_DISCOUNT = 8;
  REFERRAL_DISCOUNT = 9;
  SEASONAL_PROMOTION = 10;
  CASHBACK = 11;
}

message GetPromotionByCodeRequest {
  string code = 1;
}